-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0 Alpha
-
None
Test tst_QPainter::fpe_radialGradients fails on armv7 due to division by null exception. It passes if brush is not set to QRadialGradient or if QRadialGradient constructor parameters are not exactly half of the img width (10.5, 10.5, 10.5).
Qt was configured with following options:
./configure -R . -openssl -device linux-imx6-g++ -device-option CROSS_COMPILE=/opt/b2qt/2.1.1/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi- -device-option 'DISTRO_OPTS=hard-float boot2qt' -sysroot /opt/b2qt/2.1.1/sysroots/cortexa9hf-neon-poky-linux-gnueabi -extprefix /home/sanurmen/Temp/qtinstall -mysql_config /home/qt/work/b2qt/toolchain/sysroots/cortexa9hf-vfp-neon-poky-linux-gnueabi/usr/bin/mysql_config -psql_config /dev/null -tslib -no-xcb -opensource -confirm-license -nomake tests -verbose -prefix /home/sanurmen/Temp/qtinstall -developer-build -nomake examples
This leads to following compilation parameters:
/opt/b2qt/2.1.1/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -c -pipe -march=armv7-a -mfpu=neon -DLINUX=1 -DEGL_API_FB=1 -mfloat-abi=hard --sysroot=/opt/b2qt/2.1.1/sysroots/cortexa9hf-neon-poky-linux-gnueabi -g -std=gnu++11 -Wall -W -D_REENTRANT -fPIC -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR='"/home/sanurmen/Work/Qt/repos/qtbase/tests/auto/gui/painting/qpainter"' -I. -I../../../../../include/QtWidgets/5.9.0 -I../../../../../include/QtWidgets/5.9.0/QtWidgets -I../../../../../include -I../../../../../include/QtWidgets -I../../../../../include/QtGui/5.9.0 -I../../../../../include/QtGui/5.9.0/QtGui -I../../../../../include/QtGui -I../../../../../include/QtTest -I../../../../../include/QtCore/5.9.0 -I../../../../../include/QtCore/5.9.0/QtCore -I../../../../../include/QtCore -I.moc -I../../../../../mkspecs/devices/linux-imx6-g++ -o .obj/tst_qpainter.o tst_qpainter.cpp /opt/b2qt/2.1.1/sysroots/x86_64-pokysdk-linux/usr/bin/arm-poky-linux-gnueabi/arm-poky-linux-gnueabi-g++ -mfloat-abi=hard --sysroot=/opt/b2qt/2.1.1/sysroots/cortexa9hf-neon-poky-linux-gnueabi -Wl,-rpath,/home/sanurmen/Temp/qtinstall/lib -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../../lib -o tst_qpainter .obj/tst_qpainter.o -L/home/sanurmen/Work/Qt/repos/qtbase/lib -lQt5Widgets -lQt5Gui -lQt5Test -lQt5Core -lGLESv2 -lEGL -lpthread
For Gerrit Dashboard: QTBUG-59961 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
227258,3 | Fix division by zero in radial gradiants with NEON | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |